audit: regenerate codebase audit and quality scorecard (2026-04-26)
All 22 sections generated from source. Snyk: 0 vulnerabilities.
Key findings: 100% Javadoc, 100% JaCoCo coverage enforced,
zero TODO/FIXME markers. Strategic milestones (household, memory,
skills, weather-current) documented as non-blocking.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>